# tickrate

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
.github/workflows/: ci.yml
src/core/: Types.h
src/model/: Analytics.cpp  Analytics.h  CS2Types.h  MarketDataModel.cpp  MarketDataModel.h
src/network/: BinanceClient.cpp  BinanceClient.h  BybitClient.cpp  BybitClient.h  CS2MarketClient.cpp  CS2MarketClient.h  IExchangeClient.h  OpenSkinClient.cpp  OpenSkinClient.h  WebSocketClient.cpp  WebSocketClient.h
src/orderbook/: OrderBook.cpp  OrderBook.h
src/ui/: AnalyticsPanel.cpp  AnalyticsPanel.h  CS2ListingsWidget.cpp  CS2ListingsWidget.h  CS2MarketStatsWidget.cpp  CS2MarketStatsWidget.h  CS2MarketplaceWidget.cpp  CS2MarketplaceWidget.h  CS2PriceChartWidget.cpp  CS2PriceChartWidget.h  CS2ScatterWidget.cpp  CS2ScatterWidget.h  CandlestickWidget.cpp  CandlestickWidget.h  DeltaBarWidget.cpp  DeltaBarWidget.h  DepthChartWidget.cpp  DepthChartWidget.h  FloatHistogramWidget.cpp  FloatHistogramWidget.h  HeatmapWidget.cpp  HeatmapWidget.h  OrderBookLadder.cpp  OrderBookLadder.h  SteamLoginDialog.cpp  SteamLoginDialog.h  TapeWidget.cpp  TapeWidget.h  VolumeProfileWidget.cpp  VolumeProfileWidget.h
src/util/: CandleBuilder.cpp  CandleBuilder.h  Indicators.h  ShimmerTimer.cpp  ShimmerTimer.h
tests/: test_analytics.cpp  test_cs2candles.cpp  test_cs2skin.cpp  test_indicators.cpp  test_orderbook.cpp
